[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/SleepyDust.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/StartScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/SceneWrapper.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Dungeon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Introduction.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/EndingScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Credits.tscn" type="PackedScene" id=9]

[node name="Main" type="Node2D"]
script = ExtResource( 8 )

[node name="StartScreen" parent="." instance=ExtResource( 2 )]

[node name="Credits" parent="." groups=[
"credits",
] instance=ExtResource( 9 )]
talk_id = "credits"

[node name="Introduction" parent="." groups=[
"intro",
] instance=ExtResource( 5 )]

[node name="Dungeon" parent="." groups=[
"dungeon",
] instance=ExtResource( 4 )]

[node name="EndingScreen" parent="." groups=[
"ending",
] instance=ExtResource( 6 )]

[node name="SceneWrapper" parent="." instance=ExtResource( 3 )]

[node name="UI" parent="." instance=ExtResource( 7 )]

[node name="SleepyDust" parent="." instance=ExtResource( 1 )]

[connection signal="game_started" from="StartScreen" to="." method="_on_StartScreen_game_started"]
[connection signal="game_started" from="StartScreen" to="Introduction" method="_on_StartScreen_game_started"]
[connection signal="show_credits" from="StartScreen" to="Credits" method="_on_StartScreen_show_credits"]
[connection signal="show_credits" from="StartScreen" to="." method="_on_Credits_started"]
[connection signal="credits_completed" from="Credits" to="." method="_on_Credits_completed"]
[connection signal="intro_completed" from="Introduction" to="." method="_on_Introduction_intro_completed"]
[connection signal="completed_level" from="Dungeon" to="." method="_on_Dungeon_completed_level"]
[connection signal="completed_level" from="Dungeon" to="EndingScreen" method="_on_Dungeon_completed_level"]
[connection signal="ending_completed" from="EndingScreen" to="." method="_on_EndingScreen_ending_completed"]
